syntax = "proto3";

package app;

import "hwsc-user-svc/user/hwsc-user-svc.proto";
import "lib/user.proto";
import "hwsc-document-svc/document/hwsc-document-svc.proto";
import "lib/document.proto";
import "hwsc-file-transaction-svc/file/hwsc-file-transaction-svc.proto";

option go_package = "github.com/hwsc-org/int/hwsc-app-gateway-svc/app";

service AppGatewayService {
    rpc GetStatus (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc GetToken (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }

    rpc CreateUser (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc DeleteUser (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc UpdateUser (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc AuthenticateUser (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc ListUsers (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc GetUser (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc ShareDocument (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }

    rpc CreateDocument (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc ListUserDocumentCollection (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc UpdateDocument (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc DeleteDocument (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc AddFile (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc DeleteFile (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc ListDistinctFieldValues (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
    rpc QueryDocument (AppGatewayServiceRequest) returns (AppGatewayServiceResponse) {
    }
}

message AppGatewayServiceRequest {
    string token = 1;
    user.UserRequest user_request = 2;
    document.DocumentRequest document_request = 3;
    file.FileTransactionRequest file_transaction_request = 4;
    file.Chunk chunk = 5;
}

message AppGatewayServiceResponse {
    oneof status {
        uint32 code = 1;
    }
    string message = 2;
    string token = 3;
    lib.User user = 4;
    // for ListUsers response
    repeated lib.User user_collection = 5;
    lib.Document document = 6;
    // Response for ListUserDocumentCollection
    // Response for QueryDocument
    repeated lib.Document document_collection = 7;
    // Response for ListDistinctFieldValues
    lib.QueryTransaction query_results = 8;
}
